<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
tools:context=".controller.WelcomeActivity">

    <ImageView
        android:id="@+id/dialog_imageview"
        android:layout_width="291dp"
        android:layout_height="728dp"
        android:background="#DA5F6A"
        android:gravity="center"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="254dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dialog_imageview"
        app:layout_constraintStart_toStartOf="@+id/dialog_imageview"
        app:layout_constraintTop_toTopOf="@+id/dialog_imageview">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lan_radio_group_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/language_option"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mode_radio_group"
                app:layout_constraintVertical_bias="0.050000012" />

            <RadioGroup
                android:id="@+id/lan_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lan_radio_group_text">

                <RadioButton
                    android:id="@+id/radioEngToCh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="@string/language_option2"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioChToEng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/language_option1"
                    android:textColor="#FFFFFF" />

            </RadioGroup>

            <TextView
                android:id="@+id/mode_radio_group_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/mode_option"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/dialog_imageview"
                app:layout_constraintVertical_bias="0.01999998" />

            <RadioGroup
                android:id="@+id/mode_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mode_radio_group_text">

                <RadioButton
                    android:id="@+id/radioTextMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="@string/mode_option1"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioListenMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/mode_option2"
                    android:textColor="#FFFFFF" />
            </RadioGroup>

            <TextView
                android:id="@+id/size_radio_group_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/size_option"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lan_radio_group"
                app:layout_constraintVertical_bias="0.01999998" />

            <RadioGroup
                android:id="@+id/size_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/size_radio_group_text">

                <RadioButton
                    android:id="@+id/radioSizeMode4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/size_option1"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioSizeMode6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/size_option2"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioSizeMode9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="@string/size_option3"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioSizeMode12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/size_option4"
                    android:textColor="#FFFFFF" />
            </RadioGroup>

            <TextView
                android:id="@+id/difficulty_seekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/difficulty_seekbar"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lan_radio_group"
                app:layout_constraintVertical_bias="0.01999998" />

            <SeekBar
                android:id="@+id/seekBar2"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:max="5"
                android:progress="3"
                android:progressTint="@color/white"
                android:thumbTint="@color/white" />

            <TextView
                android:id="@+id/theme_radio_group_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/theme_option"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lan_radio_group"
                app:layout_constraintVertical_bias="0.01999998" />

            <RadioGroup
                android:id="@+id/theme_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar2">

                <RadioButton
                    android:id="@+id/lightTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/light_button"
                    android:textColor="#FFFFFF"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/darkTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/dark_button"
                    android:textColor="#FFFFFF" />
            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_btn_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_boarder"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/cancel_button"
                    android:textColor="#ffffffff"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/confirm_btn_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_boarder"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/confirm_button"
                    android:textColor="#ffffffff"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>